# raftengine

./: .testmondata  CHANGELOG.md  CLAUDE.md  README.md  README.org  cover_tools.cfg  coverage.cfg  pyproject.toml  pytest.ini  run_tests.sh  test_generator.org  test_message_formatters.py  test_tools.sh  todo.org  todo.txt  tox.ini  tree.txt
ai_experiments/: variants.org
claude_plans/: raft_compliance_instrumentation_plan.md  raft_feature_identification_methodology.md  request_2.org  test_feature_definitions_checklist.md
demos/auctions/: bidding.py  catalog.py  generators.py  notes.org  records.py  requirements.txt  simple.py  snapshot.py  viewer.py
demos/bank/: CLAUDE.md  README.md  README.org  as_client.py  as_server.py  coverage.cfg  next_task.md  pyproject.toml  pytest.ini  t.py  test_full_chain.py  test_proxy.py
demos/tnsport/: triv_client.py  triv_server.py
dev_tools/: actions.py  build_docs.py  build_feature_reports.py  build_trace_org.py  cluster_states.py  doc_plan.org  feature_db.py  features.py  log_control.py  logging_ops.py  make_trace_pdf.py  memory_log.py  memory_log_v2.py  network_sim.py  operations.py  pausing_cluster.py  pausing_server.py  readable_message_formatters.py  sequences.py  servers.py  sqlite_log.py  stepper.py  table_legend.org  table_legend.rst  test_def_db.py  test_trace.py  trace_data.py  trace_formatters.py  trace_output.py  trace_shorthand.py  triggers.py
dev_tools_tests/: .gitignore  README.md  __init__.py  fixtures.py  run_coverage.sh  test_message_formatters.py  test_new_org_formatter.py  test_nodestate_format.py  test_puml_formatters.py  test_runner.py
docs/: raftengine.rst  requirements.txt  run_apidoc.sh
docs/source/: conf.py  (+7 more)
examples/: todo.org
extras_tests/: coverage.cfg  pytest.ini
partials/: README.org  actions.py  cluster_states.py  ignoretest_stepper.py  stepper.py  test_generator.org
raftengine/: __init__.py
state_traces/: tests_test_commands_1__test_command_1.csv  tests_test_commands_1__test_command_2_leaders_1.csv  tests_test_commands_1__test_command_2_leaders_2.csv  tests_test_commands_1__test_command_after_heal_1.csv  tests_test_commands_1__test_command_sqlite_1.csv  tests_test_commands_1__test_follower_explodes_in_command.csv  tests_test_commands_1__test_follower_rewrite_1.csv  tests_test_commands_1__test_follower_rewrite_2.csv  tests_test_commands_1__test_follower_run_error.csv  tests_test_commands_1__test_full_catchup.csv  tests_test_commands_1__test_leader_explodes_in_command.csv  tests_test_commands_1__test_long_catchup.csv  tests_test_elections_1__test_election_1.csv  tests_test_elections_1__test_election_2.csv  tests_test_elections_1__test_reelection_1.csv  tests_test_elections_1__test_reelection_2.csv  tests_test_elections_1__test_reelection_3.csv  tests_test_elections_2__test_election_candidate_log_too_old_1.csv  tests_test_elections_2__test_election_candidate_too_slow_1.csv  tests_test_elections_2__test_election_leader_goes_too_far_1.csv  tests_test_elections_2__test_election_timeout_1.csv  tests_test_elections_2__test_election_vote_once_1.csv  tests_test_elections_2__test_failed_first_election_1.csv  tests_test_elections_2__test_run_to_election_1.csv  tests_test_elections_2__test_stepwise_election_1.csv  tests_test_log_fiddles__test_empty_log_1.csv  tests_test_log_fiddles__test_empty_log_2.csv  tests_test_msg_edges__test_message_errors.csv  tests_test_msg_edges__test_restart_during_heartbeat.csv  tests_test_msg_edges__test_slow_voter.csv  tests_test_partition_1__test_partition_1.csv  tests_test_partition_1__test_partition_2_leader.csv  tests_test_random_code__test_normal_command_sequence_1.csv  tests_test_random_code__test_normal_election_sequence_1.csv  tests_test_random_code__test_normal_election_sequence_2.csv  tests_test_random_code__test_partial_sequences_1.csv  tests_test_timers_1__test_election_timeout_1.csv  tests_test_timers_1__test_heartbeat_1.csv  tests_test_timers_1__test_heartbeat_2.csv  tests_test_timers_1__test_lost_leader_1.csv
tests/: conftest.py  log.sqlite  requirements.txt  servers.py  test_class_edges.py  test_commands_1.py  test_dev_tools.py  test_elections_1.py  test_elections_2.py  test_events.py  test_log_fiddles.py  test_member_changes.py  test_msg_edges.py  test_partition_1.py  test_random_code.py  test_snapshots.py  test_stepper.py  test_timers_1.py
(+1688 files in other folders)
